--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_NAME = "APLIKASI DATA LULUSAN PAPUA"
 REACT_APP_LOCALE = "en-US"
-REACT_APP_API_URL = "https://adlp-backend-r644o80mr-charlesyaas.vercel.app/"
-REACT_APP_API_PATH = "https://adlp-backend-r644o80mr-charlesyaas.vercel.app/api/"
+REACT_APP_API_URL = "https://adlp-backend-production.up.railway.app/"
+REACT_APP_API_PATH = "https://adlp-backend-production.up.railway.app/api/"
 REACT_APP_STORAGE_KEY = "APLIKASI_DATA_LULUSAN_PAPUA"
 NODE_ENV = "production"
 PORT=8050
